2011-04-01	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile: Update to account for movement of .cfg files.

2011-03-03	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* classic_signal/test.c: Example clean up.

2010-04-08	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* classic_signal/Makefile: Change executable name from hello.

2009-08-06	Joel Sherrill <joel.sherrill@oarcorp.com>

	* ChangeLog: New file.
